<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Studio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="btnName_photo">Photo</string>
    <string name="btnName_video">Video</string>
    <string name="btnName_about">About</string>
    <string name="title_activity_dumb"></string>
    <string name="title_activity_photo_menu"></string>
    <string name="photoMenuLogo">appLogo</string>
    <string name="MainMenuLogo">appLogo</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_camera">Camera</string>
    <string name="title_activity_gallery"></string>
    <string name="title_activity_picasso">PicassoActivity</string>

</resources>
